# ftk

./: .pylintrc  dvc.yaml  pyproject.toml  setup.cfg
data/raw/: tinyshakespeare.txt.dvc
data/words/: .gitignore
ftk/: __main__.py  api.py
ftk/data/: __init__.py  transforms.py  word_dataset.py
tools/: preprocess.py
