[tool.poetry]
name = "federated-ten-key"
version = "0.1.0"
description = ""
authors = ["Daniel Suess <daniel@dsuess.me>"]

[tool.poetry.dependencies]
python = "^3.7"
pysyft = "^0.0.1"
numpy = "^1.19.1"
spacy = "^2.3.2"
dvc = "^1.2.0"
click = "^7.1.2"
torch = "^1.5.1"
pytorch-lightning = "^0.8.5"
matplotlib = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
mypy = "^0.782"
pylint = "^2.5.3"
ipykernel = "^5.3.4"
black = "^19.10b0"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
